// ***********************
//  Euskalbar - CHANGELOG
// ***********************

3.1 bertsioa
================
- Azal pertsonalizatuak erabiltzeko aukera gehitu da. (#57)
- Elebila euskarazko bilatzailea gehitu zaio barrari. (#56)
- CorpEusen eta ZT Corpusean azentu markak, eñeak eta dieresiak ematen zituzten arazoak konpondu dira. (#55)
- Ereduzko prosa gaur proiektuko corpusa eta Klasikoen gordailua gehitu zaizkio barrari. (#54)
- Bilaketa konbinatuetan Hiztegi Batuaren azpisarrerak kontsultatzeko aukera gehitu da. (#40) 
- Hiztegien menua erakutsi/ezkutatzeko hobespena hobespenen leihoan integratu da. (#49)
- Testuinguru-menua erakutsi/ezkutatzeko hobespena sortu da. (#48)
- Laster-teklak sortu dira. (#44)
- Euskalterm-en bilaketak egitean, hitz baten hasiera kontsultatzen bada, hitz amaieran "*" komodina idatzi balitz bezala funtzionatzen du. (#60)


3.0 bertsioa
================
- Bergara aldeko hiztegia kontsultagai dago. (#37) (#53)
- CorpEus gehitu zaio barrari. (#42) (#46)
- Kontsulta konbinatuetan azpisarreren kontsulta gaitzeko edo ezgaitzeko hobespena sortu da. (#41)
- Kontsulta konbinatuetan Elhuyarren eta 3000ren azpisarrerak ere kontsultatzen dira. (#26)
- Elhuyar hiztegia tarteko orrialderik erabili gabe kontsulta daiteke. (#36)
- POST metodoa darabilten hiztegien atzipena hobetu da. (#32)
- Kontsulta konbinatuetan hiztegi gehiago kontsulta daitezke. (#25)
- Kontsulta konbinatuetan hiztegien jatorrizko webguneetara joateko esteka erantsi da. (#35)
- Ongi etorri leihoa sortu da. (#29)
- Intza proiektuko lokuzioak kontsultatzeko botoia gehitu zaio barrari.
- Sinonimoen hiztegiak gehitu zaizkio barrari.
- Barrako zenbait hiztegi erakutsi eta ezkutatzeko aukera sortu da. (#6)
- Azalak sortu dira. (#14)
- Estatistika lokalak sortu dira. (#4)
- Estatistika lokalak ezabatzeko botoi bat gehitu zaio estatistiken leihoari (#23)
- 3000ren azpisarrerak kontsultatzean zegoen arazoa konpondu da. (#18)