@@ -15,6 +15,7 @@
 <!ENTITY euskalbar.uzei.tooltip "Sin.UZEI">
 <!ENTITY euskalbar.itzul.tooltip "Archivo de la lista de correo ItzuL">
 <!ENTITY euskalbar.harluxet.tooltip "Diccionario enciclopédico Harluxet">
+<!ENTITY euskalbar.wikipedia.tooltip "Wikipedia en euskera">
 <!ENTITY euskalbar.mokoroa.tooltip "Base de datos Mokoroa">
 <!ENTITY euskalbar.intza.tooltip "Locuciones del proyecto Intza">
 <!ENTITY euskalbar.klasikoak.tooltip "Clásicos del euskera (Klasikoen gordailua)">
@@ -34,8 +35,8 @@
 <!ENTITY euskalbar.about.whatsnewtitle "Notas de la versión">
 <!ENTITY euskalbar.about.whatsnew1 "Las principales novedades de esta versión de Euskalbar son las siguientes:">
 <!ENTITY euskalbar.about.whatsnew2 "Se ha creado un nuevo sitio web">
-<!ENTITY euskalbar.about.whatsnew3 "Se ha añadido el buscador vasco Elebila">
-<!ENTITY euskalbar.about.whatsnew4 "Se han añadido el corpus Ereduzko prosa gaur y Klasikoen gordailua">
+<!ENTITY euskalbar.about.whatsnew3 "Se han añadido el buscador vasco Elebila y la Wikipedia en euskera">
+<!ENTITY euskalbar.about.whatsnew4 "Se han añadido los corpus Ereduzko Prosa Gaur y Klasikoen Gordailua">
 <!ENTITY euskalbar.about.whatsnew5 "Se ha añadido la opción de usar skins personalizados">
 <!ENTITY euskalbar.about.whatsnew6 "Se han creado atajos de teclado">
 <!ENTITY euskalbar.about.whatsnew7 "El listado completo de cambios se puede consultar en la siguiente dirección (en euskera):">
