@@ -5,6 +5,7 @@
 3.1 bertsioa
 ================
 - Azal pertsonalizatuak erabiltzeko aukera gehitu da. (#57)
+- Euskal Wikipedia gehitu zaio barrari. (#61)
 - Elebila euskarazko bilatzailea gehitu zaio barrari. (#56)
 - CorpEusen eta ZT Corpusean azentu markak, eñeak eta dieresiak ematen zituzten arazoak konpondu dira. (#55)
 - Ereduzko prosa gaur proiektuko corpusa eta Klasikoen gordailua gehitu zaizkio barrari. (#54)
